Fix check or cross box not hiding when requested by the JS. Add background to the check or cross box to contrast the body.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,20 +156,28 @@ header button {
 
 #outer-checkbox {
     flex-direction: column;
-    padding-top: 6.3rem;
+    padding-top: 6.5rem;
     width: 60px;
 }
 
 .checkbox {
     display: flex;
-    overflow: hidden;
-    margin: 1.4rem 0;
-    width: 60px;
-    height: 60px;
+    background-color: white;
+    border-radius: 10px;
+    margin: 1rem 0;
+    width: 70px;
+    height: 70px;
+}
+
+.check {
+    margin: auto;
+}
+
+.cross {
+    margin: auto;
 }
 
 .fa-circle-check {
-    display: none;
     margin: auto;
     font-size: 60px;
     color: green;
@@ -431,18 +439,30 @@ header button {
     #question-answer-box {
         gap: 3rem;
         padding-top: 1rem;
+        justify-content: flex-end;
+    }
+
+    #outer-question {
+        padding-right: 5rem;
+    }
+
+    #outer-answer {
+        padding-right: 5rem;
+    }
+
+    #outer-timer-buttons {
+        align-content: center;
+        width: 100%;
+        gap: 0.5rem;
+        margin: 1rem 1rem;
+        flex-direction: row;
+        flex-wrap: wrap;
     }
 }
 
 @media only screen and (max-width: 400px) {
     #game-box {
         gap: 5rem;
-    }
-    
-    #question-answer-box {
-        gap: 3rem;
-        padding-top: 1rem;
-        justify-content: flex-end;
     }
 
     #outer-checkbox {
@@ -462,10 +482,6 @@ header button {
     #outer-timer-buttons {
         order: 1;
         /* gap: 2rem; */
-        width: 100%;
-        margin: 1rem 0;
-        flex-direction: row;
-        flex-wrap: wrap;
     }
 
     #outer-start-game {
